feat: add seperate myListClient, changes to endpoints and doc
