# pages/api/mylist.js
@@ -1,16 +1,18 @@
-import mongoClient from 'server/mongoDb';
 import withAuth from 'server/withAuth';
+import { getMyList } from 'server/services/myListClient';
 
 async function handler(req, res) {
-  const client = await mongoClient;
-  const db = client.db(process.env.MONGODB_DB);
-
   if (req.method == 'GET') {
-    const list = await db.collection('user_lists').findOne({ _id: req.session.id });
-    if (!list) {
-      return res.status(200).json([]);
+    try {
+      const list = await getMyList(req);
+      if (!list) {
+        return res.json([]);
+      }
+      return res.status(200).json(list);
+    } catch (e) {
+      const message = e.response ? await e.response.text() : e.message;
+      return res.status(400).json(message);
     }
-    return res.status(200).json(list?.items);
   }
 }
 export default withAuth(handler);
